course and module progresses added